--- a/Notebook 4.html
+++ b/Notebook 4.html
@@ -14646,7 +14646,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>First the weather dataset should de downloaded and preprocces for modelling.</p>
+<p>First the weather dataset should de downloaded and preprocces for modelling. The weather data used here is manually been extracted from wundergorund.com and weather.gov to an excel file and exported to a csv file saved on github.</p>
 
 </div>
 </div>
